Modified about section and added animations

--- a/index.html
+++ b/index.html
@@ -62,29 +62,30 @@
         <section class="portfolio container-fluid justify-content-center " id="portfolio">
             <h1 class="display-4 heading-primary mb-5">RECENT PROJECTS</h1>
             <div class="wrapper container">
-                <div class="project__box box--1" data-aos="fade-right">
+                <div class="project__box box--1" >
                     <h3>Todo App</h3>
                     <p class="small-description">A simple todo website which uses localstorage to store each todo </p>
-                    <a href="https://github.com/CM96/todo" class="btn btn-dark rounded-pill" target="_blank">See more &rarr;</a>
-
+                    <a href="https://github.com/CM96/todo" class="link-button" target="_blank">CODE</a>
+                    <a href="https://cm96.github.io/todo/" class="link-button mt-5" target="_blank"> DEMO </a>
                 </div>
-                <div class="project__box box--2" data-aos="fade-left">
-                    <h3>eSIS(In progress)</h3>
+                <div class="project__box box--2">
+                    <h3>eSIS</h3>
                     <p class="small-description">The student Management System at the University of WIsconsin River Falls</p>
-                    <a href="https://github.com/CM96/esis_test" class="btn btn-dark rounded-pill">See more &rarr;</a>
+                    <a href="https://github.com/CM96/esis_test" class="link-button" target="_blank">CODE</a>
 
                 </div>
-                <div class="project__box box--3" data-aos="fade-right">
-                    <h3>Most Succesful teams</h3>
-                    <p class="small-description">Small SQL database of the most successful soccer teams in Europe
+                <div class="project__box box--3">
+                    <h3>Ronah Smoothies</h3>
+                    <p class="small-description">Website for Ronah Smoothies based in Kinshasa(Democratic Republic of the Congo)
                     </p>
-                    <a href="https://docs.google.com/spreadsheets/d/1aokx4U6iP5O_8_QypDAv3JdvltPwhoprbIdRyICNa6A/edit#gid=0" class="btn btn-dark rounded-pill" target="_blank">See more &rarr;</a>
+                    <a href="https://github.com/CM96/Ronah" class="link-button" target="_blank">CODE</a>
+                    <a href="https://cm96.github.io/Ronah/" class="link-button mt-5" target="_blank"> DEMO </a>
                 </div>
-                <div class="project__box box--4" data-aos="fade-left">
+                <div class="project__box box--4">
                     <h3>Portfolio</h3>
                     <p class="small-description">This website portfolio. One of my very first completed websites
                     </p>
-                    <a href="https://github.com/CM96/myportfolio" class="btn btn-dark rounded-pill" target="_blank">See more &rarr;</a>
+                    <a href="https://github.com/CM96/myportfolio" class="link-button" target="_blank">CODE</a>
                 </div>
             </div>
         </section>        
@@ -92,126 +93,78 @@
         <section class="about container-fluid" id="about">
             <h1 class="heading-primary display-3 mb-5">About Me</h1>
             <div class="bio container mb-5">
-                <div class=" bio-image rounded-circle " data-aos="zoom-in"></div>
-                <div class=" bio-description " data-aos="zoom-in">
+                <div class=" bio-image rounded-circle " data-aos="fade-right"></div>
+                <div class=" bio-description " data-aos="fade-left">
                     <h1 class="heading-tertiary">who I am</h1>
                     <p class="paragraph ">
-                        My name is Chris Munoko and I am a senior student at the University of Wisconsin River Falls majoring in
-                        Computer Science. I was born and raised in the Democratic Republic of the Congo and currently lives in River Falls(WI).
+                        My name is Chris Munoko and I am a recent Computer Science graduate of the University of Wisconsin River Falls.
+                         I was born and raised in the Democratic Republic of the Congo and currently live in River Falls(WI).
                     </p>
                 </div>
             </div>
-            <div class="bio-boxes container mt-4">
-                <div class="bio-box bio-box--1" data-aos="fade-right">
-                    <h1 class="heading-tertiary">What my skills are...</h1>
-                    <ul class="bio__list">
-                        <li class="bio__item">C, Java, JavaScript</li> <!--family-->
-                        <li class="bio__item">MongoDb, Oracle SQL, Node.js</li> <!--Faith-->
-                        <li class="bio__item">Professionalism</li> <!--Professionalism-->
-                    </ul>
-                    <a href="#popup_1" class="btn rounded-pill mt-4">Read more</a>
+            <div class="skills container" data-aos="fade-up" data-aos-duration="1500">
+                <h1 class="display-4">Skills</h1>
+                <div class="skills__summary">
+                    <div class="development">
+                        <h1 class="display-6 mb-5"> <i class="fas fa-file-code"></i> Development</h1>
+                        <div class="development__skills mt-2">
+                            <div class="dev-skill rounded-circle" data-aos="fade-left" data-aos-delay="10">
+                                <i class="fab fa-html5"></i>
+                            </div>
+                            <div class="dev-skill rounded-circle" data-aos="fade-left" data-aos-delay="15">
+                                <i class="fab fa-css3-alt"></i>
+                            </div>
+                            <div class="dev-skill rounded-circle" data-aos="fade-left" data-aos-delay="20">
+                                <i class="fab fa-js"></i>
+                            </div>
+                        </div>
+                        <div class="development__skills mt-2">
+                            <div class="dev-skill rounded-circle" data-aos="fade-left" data-aos-delay="30">
+                                <i class="fab fa-java"></i>
+                            </div>
+                            <div class="dev-skill rounded-circle" data-aos="fade-left" data-aos-delay="35">
+                                <i class="fab fa-python"></i>
+                            </div>
+                            <div class="dev-skill rounded-circle" data-aos="fade-left" data-aos-delay="40">
+                                <i class="fab fa-node"></i>
+                            </div>
+                        </div>
+                        <div class="development__skills mt-2">
+                            <div class="dev-skill rounded-circle" data-aos="fade-left" data-aos-delay="45">R
+                                <i></i>
+                            </div>
+                            <div class="dev-skill rounded-circle" data-aos="fade-left" data-aos-delay="50">
+                                <i class="fab fa-bootstrap"></i>
+                            </div>
+                            <div class="dev-skill rounded-circle"data-aos="fade-left" data-aos-delay="55">
+                                <i class="fab fa-react"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="databases" >
+                        <h1 class="display-6 mb-5"><i class="fas fa-database"></i> Databases</h1>
+                        <div class="databases__skills">
+                            <div class="databases__skill rounded-circle" data-aos="fade-left" data-aos-delay="10">MongoDB</div>
+                            <div class="databases__skill rounded-circle" data-aos="fade-left" data-aos-delay="10">MYSQL</div>
+                        </div>
+                    </div>
+                    <div class="soft">
+                        <h1 class="display-6 mb-5">Soft Skills</h1>
+                            <ul class="soft__skills">
+                                <li>Communication</li>
+                                <li>Teamwork</li>
+                                <li>Time Management</li>
+                                <li>Critical Thinking</li>
+                                <li>Work Ethic</li>
+                            </ul>
+                    </div>
                 </div>
-                <div class="bio-box bio-box--2" data-aos="fade-up">
-                    <h1 class="heading-tertiary">I am all about...</h1>
-                    <ul class="bio__list">
-                        <li class="bio__item">Dedication </li>
-                        <li class="bio__item">Hard Work</li>
-                        <li class="bio__item">Tenacity</li>
-                    </ul>
-                    <a href="#popup_2" class="btn rounded-pill mt-4">Read more</a>
-                </div>
-                <div class="bio-box bio-box--3" data-aos="fade-left">
-                    <h1 class="heading-tertiary">I enjoy...</h1>
-                    <ul class="bio__list">
-                        <li class="bio__item">Coding</li>
-                        <li class="bio__item">Watching Soccer</li>
-                        <li class="bio__item">Playing Video games</li>
-                    </ul>
-                    <a href="#popup_3" class="btn rounded-pill mt-4">Read more</a>
-                </div>
+            </div>
+            <div class="popup-button container">
+                <button id="toggle-button"> <a href="#popup_3"> More about me</a></button>
             </div>
         </section>      
-        <!-- POPUPS SECTION -->
-<!-- ************************************************************************************************** -->
-        <div class="popup" id="popup_1">
-            <div class="popup__content">
-                <div class=" popup__left">
-                     <img src="./dist/images/side_image.jpg" alt="chris smiling" class="img-fluid photo"> 
-                </div>
-                <div class="popup__right">
-                    <div class="popup__logo">
-                        <img src="./dist/images/logo.png" alt="chris' brand logo" class="img-fluid">
-                    </div>
-                    <a href="#about" class="popup__close">&times;</a>
-                    <div class="divider"></div>
-                    <h1 class="heading-secondary display-4 ">I am good at...</h1>
-                    <div class="content">
-                        <h3 class="heading">
-                            Databases
-                        </h3>
-                        <p class="paragraph">
-                                I enjoy working with databases whether they are relational database management systems or NoSQL.
-                                The ones I used the most are MongoDB and Oracle SQL.
-                        </p>
-                        <h3 class="heading ">
-                            Programming
-                        </h3>
-                        <p class="paragraph">
-                            I can program in C, Java and Javascript. Although JavaScript is my favorite language to build apps,
-                            I still use java a lot and intend to use it more to build complex apps.
-                        </p>
-                        <h3 class="heading">
-                            Professionalism
-                        </h3>
-                        <p class="paragraph">
-                            I always do the work that I am assigned to with great professionalism no matter the circumstances
-                            because I know I signed up for it. I am never afraid to ask for help when I do not know something because
-                            that is an effective way to learn and to promote communication in a team.
-                        </p>
-                    </div>
-                    
-                </div>
-            </div>
-    <!-- ************************************************************************************************** -->
-        </div>
-        <div class="popup" id="popup_2">
-            <div class="popup__content">
-                <div class=" popup__left">
-                     <img src="./dist/images/side_image.jpg" alt="chris smiling" class="img-fluid photo"> 
-                </div>
-                <div class="popup__right">
-                    <div class="popup__logo">
-                        <img src="./dist/images/logo.png" alt="chris' brand logo" class="img-fluid">
-                    </div>
-                    <a href="#about" class="popup__close">&times;</a>
-                    <div class="divider"></div>
-                    <h1 class="heading-secondary display-4 my-3">I am all about...</h1>
-                    <div class="content">
-                        <h3 class="heading">
-                            Dedication
-                        </h3>
-                        <p class="paragraph">
-                            This has to be one of my strongest assets. I have often heard my coworkers say, "you are not paid enough to work this hard"
-                            
-                        </p>
-                        <h3 class="heading ">
-                            Hard work
-                        </h3>
-                        <p class="paragraph">
-                            I have learned from my models who are my father and the soccer player Cristiano Ronaldo that talent is not enough.
-                            Hard work is necessary to achieve greatness, so I give 110% in everything I do.
-                        </p>
-                        <h3 class="heading">
-                            Tenacity
-                        </h3>
-                        <p class="paragraph">
-                            There are times when things get difficult especially in the Computer Science field. Therefore, to achieve
-                            my goals, I always go with the motto "fall 7 times, get up 8"(Naoki Higashida).
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <!-- POPUP -->
         <div class="popup" id="popup_3">
             <div class="popup__content">
                 <div class=" popup__left">
@@ -221,7 +174,7 @@
                     <div class="popup__logo">
                         <img src="./dist/images/logo.png" alt="chris' brand logo" class="img-fluid">
                     </div>
-                    <a href="#about" class="popup__close">&times;</a>
+                    <a href="#toggle-button" class="popup__close">&times;</a>
                     <div class="divider"></div>
                     <h1 class="heading-secondary display-4 my-3">I enjoy...</h1>
                     <div class="content">
